# marrtino_r3d

./: CMakeLists.txt  README.md  README.md.save  TF.rnd  WAYPOINT.rnd  bringup.sh  bringup.sh.save  debug.sh  gazebo_sim.sh  myclient.py  myserver.2py  myserver.py  package.xml  simulation.sh
apriltag/: README.md  apriltag.launch  calibrate.sh  camera.yaml  frames.gv  image_view.sh  install_apriltag.sh  install_cameracalibration.sh  marrtino_camera.urdf  marrtino_frames.launch  tags.yaml
bags/: play_rosbag.sh
bringup/: r3d_bringup.py  tmuxsend.py  wsbringup.py
cfg/: laserTracking.cfg  laserWarning.cfg
cmd/: creatable01.sh  creatable02.sh  creatable03.sh  creatable04.sh  creatable05.sh  creatable06.sh  gototavolo01.sh  gototavolo02.sh  gototavolo03.sh  gototavolo04.sh  gototavolo05.sh  gototavolo06.sh  rviz.sh  rvizn.sh  simulazione.sh
config/: cam_c270.yaml  cam_paolo.yaml  laser_filter.yaml  picam.yaml  transforms.txt
doc/: frames.gv
docker/: Dockerfile.robot3d  Dockerfile.robotics-3d  build_docker.bash  docker-compose.r3d  docker-compose.yml
install/: 1-orazio.sh  LIDAR_install.sh  ROS_melodic_install.sh  ROS_noetic_install.sh  barista_system.sh  index.html  install_arduino.sh  install_g2o.sh  install_marrtino.sh  install_marrtinoR3D.sh  install_orazio.sh  install_other.sh  install_php7_4.sh  install_realsense_t265_ros.sh  install_srrg.sh  install_srrgmap.sh  install_usbcam.sh  newboard.sh  noetic_install.sh  other.sh  readme.rnd  rtabmap_install.sh  setup_udev_rules.sh
laser/: README.rnd  installld06.sh  ld06.launch
launch/: amcl.launch  amcl.sh  (+50 more)
(+200 files in other folders)
